# medical-voice-agent

./: .gitignore  AGENTS.md  LICENSE  MANUAL_TEST_PLAN.md  Medical Voice Agent — Project Instruction Prompt.md  Medical Voice Agent — Project Instruction Prompt_phase1.md  README.md  project_instruction_prompt.docx  todo.md
backend/: .env.example  README.md  pyproject.toml  seed.sql
backend/app/: config.py  main.py  supabase_client.py
backend/app/agent/: agents.py  graph.py  guardrails.py  pii_redactor.py  prompt.py  state.py  supervisor.py  tools.py  voice_prompt.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  security.py
backend/app/models/: auth.py  block.py  db_rows.py  doctor.py  patient.py  refresh_session.py  slot.py  specialty.py  user.py
backend/app/services/: auth_service.py  ingest_knowledge.py  (+5 more)
backend/evals/: eval_helpers.py  test_eval_admin_dob_validation.py  test_eval_cancel_confirmed.py  test_eval_cancel_declined.py  test_eval_identifier_fallback.py  test_eval_identity_ambiguity.py  test_eval_intent_switch.py  test_eval_new_patient_booking.py  test_eval_reschedule_flow.py  test_eval_returning_patient_booking.py  test_eval_stale_slot.py  test_eval_streaming_contract.py  test_eval_unresolved_ambiguity.py  test_eval_wrong_patient_correction.py
backend/sql/: 001_schema.sql  002_seed.sql  005_rag.sql  create_doctor_with_details.sql  rag.sql  schema.sql
backend/tests/: conftest.py  support.py  test_adversarial.py  test_agents.py  test_chat_api.py  test_eval_helpers.py  test_graph.py  test_guardrails.py  test_pii_redactor.py  test_rag_retriever.py  test_slot_engine.py  test_slot_engine_extended.py  test_supabase_client.py  test_supervisor.py  test_supervisor_helpers.py  test_time_utils.py  test_time_utils_extended.py  test_tools.py  test_workflows.py  test_workflows_edge_cases.py  test_workflows_scheduling.py  workflow_support.py
(+47 files in other folders)
