[project]
name = "medical-voice-agent"
version = "0.1.0"
description = "AI-powered medical voice scheduling agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "supabase>=2.0",
    "python-dotenv>=1.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27",          # for testing FastAPI endpoints
]