[project]
name = "medical-voice-agent"
version = "0.1.0"
description = "AI-powered medical voice scheduling agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "supabase>=2.0",
    "python-dotenv>=1.0",
    # Phase 2: Agent framework
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "langsmith>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    # Phase 3: RAG ingestion + embedding
    "httpx>=0.27",
    "ruff>=0.15.11",
    # Phase 6: Voice pipeline
    "websockets>=15.0",
    "pyjwt>=2.12.1",
    "pwdlib[argon2]>=0.3.0",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=1.3.0"]
